<resources>
    <string name="app_name">Voices of Valorant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">For All Your Soundboard Needs</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_agents">Agents</string>
    <string name="menu_wep">Weapons</string>
    <string name="menu_other">Others</string>
    <string name="title_activity_sndbreach">Breach</string>
    <string name="tab_text_1">Voice Quotes</string>
    <string name="tab_text_2">Abilities</string>
    <string name="tab_text_3">Voice Commands</string>
    <string name="title_activity_sndbrim">Brimstone</string>
    <string name="sage_ult">Resurrection</string>


    <!--
    REAL: ca-app-pub-8016302998575950/7969684273
    TEST: ca-app-pub-3940256099942544/6300978111
    -->

    <string name="ads">ca-app-pub-8016302998575950/7969684273</string>
    <string name="sorry">Sorry</string>
    <string name="on_my_way">On My Way</string>
    <string name="no">No</string>
    <string name="enemies_spotted">Enemies Spotted</string>
    <string name="requires_internet_connection">REQUIRES INTERNET CONNECTION</string>
    <string name="enemies_spotted">Enemies Spotted</string>
    <string name="spike">Spike</string>
    <string name="thanks">Thanks</string>


</resources>